@@ -17,6 +17,7 @@ Verilator 5.041 devel
 * Improve automatic selection of logic for DFG synthesis (#6370). [Geza Lore]
 * Improve `covergroup with function sample` handling  (#6387). [Jakub Wasilewski]
 * Optimize dead functions without references (#6380). [Artur Bieniek, Antmicro Ltd.]
+* Fix cell scoping performance (#6059). [Jerry Tianchen]
 * Fix while loop hang on timing-delayed assignment (#6343) (#6354). [Krzysztof Bieganski, Antmicro Ltd.]
 * Fix driver analysis of partially assigned variables (#6364) (#6378). [Geza Lore]
 * Fix V3Hash MacOS ambiguity (#6350). [Lan Zongwei]
